--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "dask (>=2025.2.0,<2026.0.0)",
     "gdal (>=3.10.2,<4.0.0)",
     "h5netcdf (>=1.5.0,<2.0.0)",
+    "numba (>=0.61.0,<0.62.0)",
 ]
 [tool.poetry.dependencies]
 python = ">=3.13, <4"
