--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "gdal (>=3.10.2,<4.0.0)",
     "h5netcdf (>=1.5.0,<2.0.0)",
     "numba (>=0.61.0,<0.62.0)",
+    "pymannkendall (>=1.4.3,<2.0.0)",
 ]
 [tool.poetry.dependencies]
 python = ">=3.13, <4"
